<resources>
    <string name="app_name">"Book 'n' Dine</string>
    <string name="action_book">Booking</string>
    <string name="action_mybookings">Bookings</string>
    <string name="bookingTitle">Welcome </string>
    <string name="bookingSubtitle">Please enter all booking details</string>
    <string name="bookingButton">Book</string>
    <string name="myBookingsTitle">Bookings</string>
    <string name="partyName">Party Name</string>
    <string name="datePrompt">  Date </string>
    <string name="timePrompt">Time </string>
    <string name="namePrompt"> Party Name</string>
    <string name="partyAmount"> Number of People</string>
    <string name="partycontact">Contact Number </string>

    <string name="title_activity_home">Welcome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">"Book 'n' Dine"</string>
    <string name="nav_header_subtitle">Making restaurant reservations more convenient.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_booking">Book</string>
    <string name="menu_mybookings">My Bookings</string>
    <string name="menu_favourites">VIP Bookings</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="AboutHeading">Welcome </string>

        <string name="AboutContent"> The purpose of this application is for our own internal staff to record and log all bookings made for our restaurant. </string>
    <string name="action_about">About</string>


<!--    Firebase -->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>


    <string name="action_edit">Edit Booking</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Please Update your Details Below</string>
    <string name="menu_list_all"> All Restaurant Bookings</string>


    <string name="select_profile_image">Select Profile Image</string>
    <string name="messageLoading">Please wait while we Connect to the Server...</string>
</resources>
