<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="40dp"

        tools:context=".fragments.BookingFragment">


        <TextView
            android:id="@+id/Title"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:text="@string/bookingTitle"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:text="@string/bookingSubtitle"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

        <TextView
            android:id="@+id/partynameinput"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/partyName"
            android:textColor="@color/darkGrey"
            app:layout_constraintStart_toStartOf="@+id/partyamount"
            app:layout_constraintTop_toTopOf="@+id/partyname" />

        <EditText
            android:id="@+id/partyname"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:focusable="true"
            android:text=""
            android:textColor="@color/darkGrey"
            app:layout_constraintStart_toEndOf="@+id/partynameinput"
            app:layout_constraintStart_toStartOf="@+id/bookedpartyamount"
            app:layout_constraintTop_toBottomOf="@+id/subtitle" />

        <TextView
            android:id="@+id/partyamount"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/partyAmount"
            android:textColor="@color/darkGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/partyContact"
            app:layout_constraintTop_toBottomOf="@+id/partynameinput"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/bookedpartyamount"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:inputType="number"

            android:textColor="@color/darkGrey"
            app:layout_constraintStart_toEndOf="@+id/partyamount"
            app:layout_constraintStart_toStartOf="@+id/bookingContact"
            app:layout_constraintTop_toTopOf="@+id/partyamount" />

        <TextView
            android:id="@+id/partyContact"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/partycontact"
            android:textColor="@color/darkGrey"
            app:layout_constraintStart_toStartOf="@+id/time"
            app:layout_constraintTop_toTopOf="@+id/bookingContact" />

        <EditText
            android:id="@+id/textView15"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:inputType="time"
            android:maxLength="5"
            android:textColor="@color/darkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.321"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toTopOf="@+id/time" />

        <EditText
            android:id="@+id/bookingContact"
            android:layout_width="181dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"

            android:ems="10"
            android:inputType="number"
            android:textColor="@color/darkGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/partyContact"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/bookedpartyamount"
            app:layout_constraintVertical_bias="0.028" />

        <TextView
            android:id="@+id/time"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/timePrompt"
            android:textColor="@color/darkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/partyContact" />

        <TextView
            android:id="@+id/bookedDate"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/datePrompt"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time" />


        <DatePicker
            android:id="@+id/bookingDate"
            android:layout_width="311dp"
            android:layout_height="370dp"
            android:textColor="@color/darkGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookedDate"
            app:layout_constraintVertical_bias="0.0" />



        <Button
            android:id="@+id/bookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Book"
            android:textColor="@color/darkGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.198"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookingDate"
            app:layout_constraintVertical_bias="0.709" />
        /
        >

        <ImageView
            android:id="@+id/imagefavourite"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
android:layout_marginTop="10dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/bookButton"
            app:layout_constraintTop_toBottomOf="@+id/bookingDate"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/star_big_off" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>